# ios-spec-driven

./: .gitignore  .mcp.json  .workflow-test  CICD_GUIDE.md  HUONG_DAN_SUBAGENT.md  INSTALLATION_SUMMARY.md  MANIFEST.in  PLUGIN_PLAN.md  PUBLISH_GUIDE.md  QUICK_REFERENCE.md  README.md  README.vi.md  RELEASE_CHECKLIST.md  SCRIPTS_README.md  SUBAGENT_ARCHITECTURE.md  TROUBLESHOOTING.md  WORKFLOW_COMPARISON.md  WORKFLOW_TEST_RESULTS.md  check-workflow-status.sh  pyproject.toml  test-workflow.sh  trigger-release.sh
.claude/: settings.local.json
.claude/agents/: execute-tasks.md  refine-spec.md  research-prd.md  spec-refiner.md  spec-writer.md  task-executor.md  task-planner.md  write-design.md  write-spec.md  write-tasks.md
.claude/hooks/: update_task_status.py
.claude/skills/dev-spec-driven/: SKILL.md
.claude/skills/figma-mcp/: SKILL.md
.claude/skills/ios-architecture/: SKILL.md
.claude/skills/ios-components/: SKILL.md
.claude/skills/ios-ui-ux/: SKILL.md
.claude/skills/mcp-figma/: SKILL.md
.claude/skills/mcp-xcode/: SKILL.md
.claude/skills/spec-driven-dev/: SKILL.md
.claude/skills/xcode-debug/: SKILL.md
.claude/skills/xcode-mcp/: SKILL.md
.github/workflows/: merge-to-main.yml  release.yml  test.yml
.kiro/steering/: development-guide.md
Shared/: COMPONENT_FORMAT.md  PBT_GUIDE.md
src/ios_spec_driven_installer/: __init__.py  cli.py  installer.py
src/ios_spec_driven_installer/templates/: .mcp.json
src/ios_spec_driven_installer/templates/.claude/agents/: research-prd.md  write-tasks.md
src/ios_spec_driven_installer/templates/.claude/shared/: COMPONENT_FORMAT.md  PARALLEL_EXECUTION_GUIDE.md
src/ios_spec_driven_installer/templates/content/agents/: execute-tasks.md  quick-implement.md  refine-spec-orchestrator.md  refine-spec-patch.md  refine-spec.md  research-prd.md  review-project-docs.md  write-design.md  write-functional-requirements.md  write-project-docs.md  write-project-overview.md  write-spec.md  write-tasks.md  write-use-cases.md  write-ux-flows.md  write-wireframes.md
(+19 files in other folders)
