[project]
name = "ios-spec-driven-installer"
version = "1.0.1"
description = "iOS Spec-Driven Development toolkit installer"
authors = [
    {name = "Nguyen Nam", email = "nguyennamkkb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["ios", "claude-code", "spec-driven", "development", "toolkit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/nguyennamkkb/ios-spec-driven-claude"
Documentation = "https://github.com/nguyennamkkb/ios-spec-driven-claude#readme"
Repository = "https://github.com/nguyennamkkb/ios-spec-driven-claude"
Issues = "https://github.com/nguyennamkkb/ios-spec-driven-claude/issues"

[project.scripts]
ios-spec-driven = "ios_spec_driven_installer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ios_spec_driven_installer"]

# Include all non-Python files in the package
[tool.hatch.build.targets.wheel.shared-data]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "MANIFEST.in",
]

# Ensure all files in templates are included
[tool.hatch.build.force-include]
"src/ios_spec_driven_installer/templates/content" = "ios_spec_driven_installer/templates/content"
"src/ios_spec_driven_installer/templates/formats" = "ios_spec_driven_installer/templates/formats"
"src/ios_spec_driven_installer/templates/.mcp.json" = "ios_spec_driven_installer/templates/.mcp.json"
